# xlsxtext

./: CMakeLists.txt  TODO.txt  readme.md
doc/: ECMA376.xml  ECMA376.xsd  zip.xlsx
include/: xlsxtext.hpp
src/: main.cpp
test/: number_format.test.cpp  xlsx.test.cpp
xlsxtext/: number_format.cpp  number_format.hpp  number_format_0.hpp  number_format_1.hpp  number_format_2.hpp  number_format_3.cpp  xlsxtext.hpp
xlsxtext/pugixml/: readme.txt
